@@ -1,3 +1,7 @@
+Wed Jun 20 13:38:24 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* svd.c (gsl_linalg_SV_decomp): added error checking
+
 Tue Jun 19 23:19:49 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* svd.c (gsl_linalg_SV_decomp): Golub-Reinsch svd, has more
